新增计时器
新增 计时器

--- a/othello.css
+++ b/othello.css
@@ -3,9 +3,12 @@
 	--border-color: #522600;
 	--board-size: 60vh;
 	--grid-count: 8;
+
+	--form-primary-color: #0969DA;
 }
 
 * {
+	line-height: 1;
 	user-select: none;
 }
 
@@ -21,6 +24,7 @@
 
 button {
 	font-size: 14px;
+	line-height: 1.2;
 	padding: 5px 20px;
 	cursor: pointer;
 	transition: background-color 0.1s;
@@ -29,6 +33,7 @@ button {
 	border-radius: 5px;
 	background-color: #FFF;
 	box-shadow: 0 1px 1px rgba(31, 31, 31, 0.04);
+	outline-color: var(--form-primary-color);
 }
 
 button:hover {
@@ -40,6 +45,96 @@ button:active {
 	border-color: #CDD0D6;
 	background-color: #DEDFE0;
 	box-shadow: inset 0 1px 1px #CDD0D6;
+}
+
+input {
+	padding: 5px 10px;
+	transition: border-color 0.1s, box-shadow 0.1s;
+	border: #D0D7DE 1px solid;
+	border-radius: 5px;
+	outline: none;
+}
+
+input:focus:not([type=checkbox]) {
+	border-color: var(--form-primary-color);
+	box-shadow: 0 0 0 1px var(--form-primary-color) inset;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+	-webkit-appearance: none !important;
+}
+
+input[type='number'] {
+	-moz-appearance: textfield;
+}
+
+select {
+	padding: 5px 10px;
+	transition: border-color 0.1s, box-shadow 0.1s;
+	border: #D0D7DE 1px solid;
+	border-radius: 5px;
+	outline: none;
+}
+
+select:focus {
+	border-color: var(--form-primary-color);
+	box-shadow: 0 0 0 1px var(--form-primary-color) inset;
+}
+
+.switch, .switch label {
+	display: inline-block;
+	box-sizing: border-box;
+}
+
+.switch label {
+	position: relative;
+	display: inline-block;
+	box-sizing: border-box;
+	width: 3.5em;
+	height: 1.5em;
+	cursor: pointer;
+	transition: all 0.1s ease-out;
+	border-radius: 0.875em;
+	background-image: linear-gradient(90deg, #D6D7DC 0, #D6D7DC 51%, #8CB9F3 0, #8CB9F3);
+	background-size: 7em 1.5em;
+}
+
+.switch label:before {
+	position: absolute;
+	top: -0.25em;
+	left: -0.5em;
+	display: block;
+	width: 2em;
+	height: 2em;
+	content: '';
+	transition: all 0.1s ease-out;
+	border-radius: 2em;
+	background-color: white;
+	box-shadow: 0 1px 3px 0 rgba(0,0,0,.4);
+}
+
+.switch input {
+	display: none;
+}
+
+.switch input:checked + label {
+	background-position: 3.4em;
+}
+
+.switch input:checked + label:before {
+	transform: translateX(2.5em);
+	background-color: #1A73E8;
+}
+
+.switch input:disabled + label {
+	cursor: not-allowed !important;
+	background: #CCC !important;
+}
+
+.switch input:disabled + label:before {
+	background: #CCC !important;
+	box-shadow: 0 0.125em 0.375em rgba(0, 0, 0, 0.5) !important;
 }
 
 .view {
@@ -225,6 +320,7 @@ button:active {
 	font-weight: 400;
 	display: flex;
 	justify-content: center;
+	align-items: center;
 	width: 150px;
 	margin: 0 auto;
 	color: var(--text-color);
@@ -234,14 +330,14 @@ button:active {
 }
 
 .side-bar-title-text {
-	margin: 10px;
 	font-family: HYYaKuHei, sans-serif, serif;
+	margin: 10px;
 }
 
 .side-bar-score-box {
+	font-family: HYCuHeiF, sans-serif, serif;
 	margin-top: 40px;
 	color: #1B1B1B;
-	font-family: HYCuHeiF, sans-serif, serif;
 }
 
 .side-bar-score {
@@ -255,13 +351,16 @@ button:active {
 	display: flex;
 	overflow: hidden;
 	justify-content: center;
+	align-items: center;
 	width: 0;
 	margin: calc(var(--board-size) / 10) auto 0;
-	transition: width 0.5s;
+	transition: width 0.5s, background-position 0.2s linear;
 	white-space: nowrap;
 	color: var(--text-color);
 	border-radius: 50px;
-	background-color: #FFF;
+	/*background-image 上面是transparent，下面是white，刚好让上面部分隐藏看不见*/
+	background-image: linear-gradient(transparent 50%, white 50%);
+	background-size: 100% 200%;
 	box-shadow: 0 3px 6px rgba(140, 149, 159, 0.15);
 }
 
@@ -270,8 +369,8 @@ button:active {
 }
 
 .turn-bar-text {
-	margin: 10px;
 	font-family: HYYaKuHei, sans-serif, serif;
+	margin: 10px;
 }
 
 .button-bar {
@@ -281,4 +380,108 @@ button:active {
 	display: flex;
 	transform: translateX(-50%);
 	gap: 10px;
+}
+
+#settings.hide {
+	display: none;
+}
+
+#settings.pre-hide {
+	animation: hide-settings 0.2s forwards;
+}
+
+@keyframes hide-settings {
+	0% {
+		display: block;
+		opacity: 1;
+	}
+	99% {
+		display: block;
+		opacity: 0;
+	}
+	100% {
+		display: none;
+	}
+}
+
+#settings.pre-show {
+	animation: show-settings 0.2s forwards;
+}
+
+@keyframes show-settings {
+	0% {
+		display: none;
+		opacity: 0;
+	}
+	1% {
+		display: block;
+		opacity: 0;
+	}
+	100% {
+		display: block;
+		opacity: 1;
+	}
+}
+
+#settings.show {
+	display: block;
+}
+
+.settings-container {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	display: block;
+	background-color: rgba(0, 0, 0, 0.5);
+	color: #444444;
+}
+
+.settings-box {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	width: 300px;
+	background-color: #F7F7F8;
+	border-radius: 10px;
+}
+
+.settings-inner-box {
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	margin: 20px;
+}
+
+.settings-title {
+	font-size: 18px;
+	font-weight: bold;
+	margin-left: 5px;
+	font-family: HYYaKuHei, serif;
+	letter-spacing: 1px;
+}
+
+.settings-cell {
+	background-color: white;
+	padding: 20px;
+	border-radius: 10px;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+	font-size: 14px;
+}
+
+.settings-cell-item {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+.settings-button-bar {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-evenly;
+	align-items: center;
 }
